FIND_PACKAGE(MPI REQUIRED)

INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
INCLUDE_DIRECTORIES(../libs/wiringPi/wiringPi)

ADD_EXECUTABLE (pi_led_mpi
	main.c)

TARGET_LINK_LIBRARIES (pi_led_mpi 
	wiringPi 
	${MPI_LIBRARIES})

IF(MPI_COMPILE_FLAGS)
    SET_TARGET_PROPERTIES(pi_led_mpi PROPERTIES
        COMPILE_FLAGS "${MPI_COMPILE_FLAGS}")
ENDIF()

IF(MPI_LINK_FLAGS)
    SET_TARGET_PROPERTIES(pi_led_mpi PROPERTIES
        LINK_FLAGS "${MPI_LINK_FLAGS}")
ENDIF()

